# kimtoy

./: CMakeLists.txt  envsettings.cpp  filtermenu.cpp  getl10n.sh  inputmethods.cpp  kimtoy.cpp  kimtoysettings.kcfg  kssf.cpp  main.cpp  myMessages.sh  preeditbar.cpp  propertywidget.cpp  statusbar.cpp  statusbar.h  theme.cpp  theme.h  themelistmodel.cpp  themer_plasma.cpp
ibus-kconfig/: CMakeLists.txt
kimgio-apng/: apng.cpp
strigi-analyzer/: fskinendanalyzer.cpp  ssfendanalyzer.cpp
thumbnailer/: CMakeLists.txt
